@startuml

title __POLIMORFISMO's Class Diagram__\n

  namespace getraenke {
    class getraenke.Apfelsaft {
    }
  }
  

  namespace getraenke {
    abstract class getraenke.Getraenk {
    }
  }
  

  namespace getraenke {
    class getraenke.Kiwisaft {
    }
  }
  

  namespace getraenke {
    class getraenke.Main {
    }
  }
  

  namespace getraenke {
    abstract class getraenke.Saft {
    }
  }
  

  namespace getraenke {
    interface getraenke.Schuettelbar {
    }
  }
  

  namespace getraenke {
    class getraenke.Spirituose {
    }
  }
  

  namespace getraenke {
    class getraenke.Tequila {
    }
  }
  

  namespace getraenke {
    class getraenke.Wodka {
    }
  }
  

  getraenke.Apfelsaft -up-|> getraenke.Saft
  getraenke.Kiwisaft -up-|> getraenke.Saft
  getraenke.Saft .up.|> getraenke.Schuettelbar
  getraenke.Saft -up-|> getraenke.Getraenk
  getraenke.Spirituose -up-|> getraenke.Getraenk
  getraenke.Tequila -up-|> getraenke.Spirituose
  getraenke.Wodka -up-|> getraenke.Spirituose


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
